diss: intro-sources and page breaks for sections

--- a/bib/eigene.bib
+++ b/bib/eigene.bib
@@ -42,6 +42,7 @@
     Year = {2009},
     Note = {Reprinted in \textcite{2009:CoolenSchrijner}},
     issn = {1559-8616},
+    keywords = {disssource},
 }
 
 @article{Walter2009a-short,
@@ -80,6 +81,7 @@
   institution = {Department of Statistics, LMU Munich},
   url = {http://epub.ub.uni-muenchen.de/11050/1/tr069.pdf},
   note = {Substantially extended version of \cite{Walter2010a}. \url{http://epub.ub.uni-muenchen.de/11050/1/tr069.pdf}},
+    keywords = {disssource},
 }
 
 @INCOLLECTION{Walter2010a,
@@ -106,6 +108,7 @@
   pages =     {391--400},
   publisher = {SIPTA},
   url = {http://www.sipta.org/isipta11/proceedings/046.html},
+    keywords = {disssource},
 }
 
 @INPROCEEDINGS{Troffaes2012a,
@@ -128,6 +131,7 @@
   number = 131,
   institution = {Department of Statistics, LMU Munich},
   url = {http://epub.ub.uni-muenchen.de/14068/},
+    keywords = {disssource},
 }
 
 @misc{Troffaes2013a,
@@ -140,6 +144,7 @@
     noMonth = {1},
     Year = {2013},
     howpublished = {Preprint available at \url{http://arxiv.org/abs/1301.0533}},
+    keywords = {disssource},
 }
 
 @incollection{itip-statinf,
@@ -152,6 +157,7 @@
     note      = "In preparation",
     longeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
     editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
+    keywords = {disssource},
 }
 
 @collection{itip,
