--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -37,6 +37,7 @@ in the model discussion in Chapter~\ref{cha:imprecisebayes-conjugate}.
 
 %***Section~\ref{sec:alternatives} ****
 
+\newpage
 
 \section{Imprecise or Interval Probability}
 \label{sec:ip-intro}
@@ -811,6 +812,7 @@ we will now turn to the reasons motivating the use of imprecise probability in s
 Again, special attention is paid to motives from a Bayesian perspective
 (Section~\ref{sec:motivation:bayesian}).
 
+\newpage
 
 \section{Motives for the Use of Imprecise Probability Methods}
 \label{sec:motivation}
