--- a/head.tex
+++ b/head.tex
@@ -15,7 +15,8 @@
 \usepackage{csquotes}
 \usepackage{booktabs}
 
-\usepackage[backend=bibtex,style=authoryear,maxbibnames=4,minbibnames=4,block=space,backref=true,dashed=false,firstinits=true]{biblatex}
+\usepackage[backend=bibtex, style=authoryear, maxbibnames=4, minbibnames=4, %
+            block=space, backref=true, dashed=false, firstinits=true, sorting=nyt]{biblatex}
 %,firstinits=true %prints first names only as initals in the bibliography
 %\mkbibnamelast{} %for Rios Insua?
 
