--- a/setsofconjugatepriors.tex
+++ b/setsofconjugatepriors.tex
@@ -32,7 +32,7 @@ Interestingly, the inferences from these two approaches in Section~\ref{sec:isip
 
 %***football example?***
 
-
+\newpage
 
 \section{Model Overview and Discussion}
 %\section{The General Model}
