diss: mixture and updating commute

--- a/alternatives.tex
+++ b/alternatives.tex
@@ -172,8 +172,8 @@ $\MZ$ is taken as all convex mixtures of parametric priors with parameters in $\
 Then, also $\MZ$ contains a variety of shapes that, however,
 do not allow for substantially different tail behaviour,
 but it also has the same property of invariance under Bayesian updating,
-because $\MN$ can be constructed as the set of all convex mixtures of distributions with parameters in $\PN$.
-
+because $\MN$ can be constructed as the set of all convex mixtures of distributions with parameters in $\PN$.%
+\footnote{See Equation~\eqref{sec:posteriormixture} in Section~\ref{sec:basicsetting}.}
 
 
 \subsection{Some Approaches Based on Conjugate Priors}
