--- a/diss.tex
+++ b/diss.tex
@@ -13,7 +13,7 @@
 \input{head}
 \input{defs}
 
-%\includeonly{appendix2}
+%\includeonly{setsofconjugatepriors,alternatives} %{appendix2}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%  Beginn des Dokuments  %%
