--- a/bib/eigene.bib
+++ b/bib/eigene.bib
@@ -1,4 +1,5 @@
-@MASTERSTHESIS{Walter2006a,
+@THESIS{Walter2006a,
+  type = {Diplomarbeit (Diploma Thesis)},
   author = {Gero Walter},
   year = 2006,
   title = {{Robuste Bayes-Regression mit Mengen von Prioris --- Ein Beitrag zur Statistik unter komplexer Unsicherheit}},
