--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -523,7 +523,7 @@
 }
 
 @article{2009:bickis,
-    Author = {M. Bickis},
+    Author = {Mi\c{k}elis Bickis},
     Journal = {Journal of Statistical Theory and Practice},
     Note = {Reprinted in \textcite{2009:CoolenSchrijner}},
     Pages = {183--195},
