--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -626,10 +626,12 @@ url = "http://www.sciencedirect.com/science/article/pii/S0888613X12000862",
     Url = {http://dx.doi.org/10.3929/ethz-a-007313975}, 
     Year = 2011}
 
-@MASTERSTHESIS{2011:krautenbacher,
+@THESIS{2011:krautenbacher,
+  type = {Diplomarbeit (Diploma Thesis)},
   author = {Norbert Krautenbacher},
   year = {2011},
-  title = {{Ein Beitrag zur generalisierten Bayes-Inferenz: Erweiterung und Anwendung der Implementierung der generalized iLUCK-models}},
+  title = {{Ein Beitrag zur generalisierten Bayes-Inferenz: Erweiterung und Anwendung der Implementierung der generalized iLUCK-models}
+           (A contribution to generalized {B}ayesian Inference: Extension and Application of the implementation of generalized iLUCK-models)},
   school = {Department of Statistics, LMU Munich},
 }
 
@@ -646,11 +648,20 @@ url = "http://www.sciencedirect.com/science/article/pii/S0888613X12000862",
 }
 
 @inproceedings{2013:utkin-wiencierz,
-    Author = {Lev Utkin and Andera Wiencierz},
+    Author = {Lev Utkin and Andrea Wiencierz},
     Booktitle = {ISIPTA '13: Proceedings of the Eighth International Symposium on Imprecise Probabilities: Theories and Applications},
     Editor = {Fabio Cozman and Thierry Denoeux and Sebastian Destercke and Teddy Seidenfeld},
-    pages = {***--***},
+    pages = {345--354},
     Title = {An imprecise boosting-like approach to regression},
+    Url = {http://www.sipta.org/isipta13/proceedings/papers/s035.pdf},
+    Year = {2013}}
+
+@inproceedings{2013:troffaes-blake,
+    Author = {Matthias Troffaes and Simon Blake},
+    Booktitle = {ISIPTA '13: Proceedings of the Eighth International Symposium on Imprecise Probabilities: Theories and Applications},
+    Editor = {Fabio Cozman and Thierry Denoeux and Sebastian Destercke and Teddy Seidenfeld},
+    pages = {311--317},
+    Title = {A Robust Data Driven Approach to Quantifying Common-Cause Failure in Power Networks},
     Url = {http://www.sipta.org/isipta13/proceedings/papers/s035.pdf},
     Year = {2013}}
 
@@ -673,5 +684,13 @@ url = "http://www.sciencedirect.com/science/article/pii/S0888613X12000862",
   url={http://www.sipta.org/isipta11/proceedings/papers/s050.pdf},
   address = {Innsbruck},
   publisher = {SIPTA}
+}
+
+@unpublished{2011:bickis:geomip,
+  title={The geometry of imprecise updating},
+  author={Mi\c{k}elis Bickis},
+  year={2011},
+  note={Abstract available at \url{http://maths.dur.ac.uk/stats/people/fc/geomip11.html}},
+  howpublished={Talk at GEOMIP-11: Workshop on Geometry of Imprecise Probability and Related Statistical Methods},
 }
 
