--- a/concluding.tex
+++ b/concluding.tex
@@ -540,7 +540,7 @@ such that updating of parameter sets
 could be expressed as a shift of the entire set within the parameter space.
 
 %yes, there is, see preliminary results by Mik Bickis (``personal communication'' if no citable work?).
-In fact, such a parametrisation has been developed by Mi\c{k}elis Bickis (personal communication),
+In fact, such a parametrisation has been developed by Mi\c{k}elis Bickis (\cite*{2011:bickis:geomip}, personal communication),
 and he is currently preparing a manuscript elaborating the details of his findings.
 In this parametrisation, a canonical prior is represented by a coordinate $(\eta_0,\eta_1)$,
 where $\eta_1$ replaces the main prior parameter $\yz$,
