--- a/isipta11.tex
+++ b/isipta11.tex
@@ -92,8 +92,8 @@ quantity is assumed to be exchangeable with the Bernoulli random
 quantities whose observations are summarised in the data, consisting
 of the number $n$ of observations and the number $s$ of these that are
 successes. In our analysis of this model, we
-will often consider $s$ as a a real-valued observation in $[0,n]$,
-keeping in mind that in reality it can only take on
+will often treat $s$ as a a real-valued observation in $[0,n]$,
+keeping in mind that in reality it can only take %on
 integer values, but the continuous representation is convenient for
 our discussions, in particular in our predictive probability plots (PPP),
 where for given $n$, $\Pl$ and $\Pu$ are discussed as functions of $s$.
