diss: last references

--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -662,7 +662,7 @@ url = "http://www.sciencedirect.com/science/article/pii/S0888613X12000862",
     Editor = {Fabio Cozman and Thierry Denoeux and Sebastian Destercke and Teddy Seidenfeld},
     pages = {311--317},
     Title = {A Robust Data Driven Approach to Quantifying Common-Cause Failure in Power Networks},
-    Url = {http://www.sipta.org/isipta13/proceedings/papers/s035.pdf},
+    Url = {http://www.sipta.org/isipta13/proceedings/papers/s031.pdf},
     Year = {2013}}
 
 @article{2010:utkin,
@@ -692,5 +692,14 @@ url = "http://www.sciencedirect.com/science/article/pii/S0888613X12000862",
   year={2011},
   note={Abstract available at \url{http://maths.dur.ac.uk/stats/people/fc/geomip11.html}},
   howpublished={Talk at GEOMIP-11: Workshop on Geometry of Imprecise Probability and Related Statistical Methods},
+}
+
+@article{1983:ferguson,
+  title={Bayesian density estimation by mixtures of normal distributions},
+  author={Ferguson, Thomas},
+  journal={Recent Advances in Statistics},
+  volume={24},
+  pages={287--302},
+  year={1983},
 }
 
