--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -1066,7 +1066,7 @@ may express naturally that the accumulating information is non-conflicting and s
 \footnote{See the comment in footnote~\ref{foot:sequential}, page~\pageref{foot:sequential}.}
 
 
-\subsection{Critique and Discussion of Some Alternatives***}
+\subsection{Critique and Discussion of Some Alternatives}
 \label{sec:ip-alternatives}
 
 We will briefly discuss here some critiques on imprecise probability methods,
@@ -1156,7 +1156,7 @@ when the priors in $\mathcal{M}$ are meant to model behavioural dispositions,
 as is the case for subjective Bayesian approaches.
 
 Leaving aside the serious problems that can arise when ignorance about $\phi$ is modelled by a non-informative prior,%
-\footnote{See, e.g., \textcite[\S 5.5.4 (h)]{1991:walley}, and \textcite{1988:pericchi:nazareth}. ***\textbf{1004/QH 233 B523 B3-3}***}
+\footnote{See, e.g., \textcite[\S 5.5.4 (h)]{1991:walley}, or \textcite[p.~367]{1988:pericchi:nazareth}.}
 a second-order distribution approach actually defines, via averaging over the elements in $\mathcal{M}$,
 a precise prior on the first level, leading to precise posterior inferences,
 thus obscuring the uncertainty in the model that was the reason
