--- a/intro.tex
+++ b/intro.tex
@@ -1250,7 +1250,7 @@ single failures would clearly not have identical failure rates.
 Because the formulas become a lot more complicated,
 we stick to the exchangeable case here.%
 \footnote{A discussion of the asymmetric case, i.e., without the assumption of exchangeability of components,
-can be found in ****ISIPTA'13 Matthias***.}
+can be found in \textcite{2013:troffaes-blake}.}
 
 Clearly, to answer typical reliability questions, such as for instance
 ``what is the probability that two or more components fail in the next month?'',
