--- a/setsofconjugatepriors.tex
+++ b/setsofconjugatepriors.tex
@@ -119,7 +119,7 @@ $\MZ$ is very flexible and contains, through the mixture distributions, a wealth
 and $\PZ$ is large enough,
 it can be assumed that $\MZ$ contains a very wide range of priors,
 as mixtures of normal distributions are dense in the space of well-behaved probability distributions
-\parencite[see, e.g.,][p.~44]{2000:priebe}***other citation****.}
+(see, e.g., \cite[p.~44]{2000:priebe}, or \cite{1983:ferguson}).}
 Nevertheless, maximisation and minimisation over $\MN$
 is quite feasible for quantities that are \emph{linear} in the parametric posteriors contained in $\MN$,
 as then we can be sure that suprema and infima are attained at the extreme points of $\MN$,
